--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://kiskovi97.github.io/CookBookAdmin",
-  "name": "CookBookAdmin",
+  "homepage": "http://kiskovi97.github.io/WatchList",
+  "name": "WatchList",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
