--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-ga": "^3.3.1",
     "react-router": "^7.6.0",
     "react-scripts": "^5.0.1",
+    "themoviedb-javascript-library": "^3.0.3",
     "uuid": "^11.1.0",
     "web-vitals": "^5.0.0"
   },
