--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "dependencies": {
     "aws-sdk": "^2.1692.0",
     "firebase": "^11.7.3",
+    "framer-motion": "^12.12.2",
     "react": "^18.0.0",
-    "react-animate-on-scroll": "^2.1.9",
     "react-dom": "^18.0.0",
     "react-ga": "^3.3.1",
     "react-router": "^7.6.0",
