--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aws-sdk": "^2.1692.0",
     "firebase": "^11.7.3",
     "framer-motion": "^12.12.2",
+    "moment": "^2.30.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-ga": "^3.3.1",
